# autokernel

./: .gitignore  AUDITORIA-CRITICA.md  LICENSE  PROPOSAL.md  README.md  SUMMARY.txt  analysis.py  bench.py  export_hf.py  extract.py  kernel.py  orchestrate.py  prepare.py  profile.py  pyproject.toml  reference.py  verify.py
.devin/autokernel/: AGENTS.md
.github/workflows/: ci.yml  pages.yml
autokernel/: __init__.py  github_publisher.py  llm_assistant.py  nemotron_client.py  rag_index.py  semaphore.py
autokernel/prompts/: cuda_migration.py  kernel_gen.py  ncu.py  review.py  spec.py  test_gen.py
config/: pipeline.yaml
cuda-lab/: hello.cu
cuda-lab/fix_math/: math.h
cuda-samples/: hello_final.cu  main.cpp
docs/: ARCHITECTURE.md  PLAYBOOK.md  index.html  robots.txt  sitemap.xml
kernelbench/: bench_kb.py  bridge.py  scorer.py
kernels/: cross_entropy.py  elementwise.py  flash_attention.py  layernorm.py  matmul.py  reduce.py  rmsnorm.py  rotary_embedding.py  softmax.py
kernels/cuda/: _compile.py  (+2 more)
models/: bert_base.py  custom.py  gpt2.py  llama_7b.py  phi3_mini.py
scripts/: continuous_pipeline.py  generate_dashboard.py  nightly_pipeline.sh  self_audit.py
systemd/: autokernel-continuous.service  autokernel-nightly.service  autokernel-nightly.timer
tests/: test_benchmark.py  test_continuous_pipeline.py  test_continuous_pipeline_extra.py  test_continuous_pipeline_phases.py  test_continuous_pipeline_util.py  test_generate_dashboard.py  test_generate_dashboard_extra.py  test_generate_dashboard_util.py  test_github_publisher.py  test_github_publisher_extra.py  test_kernel_correctness.py  test_kernel_extraction.py  test_llm_assistant.py  test_llm_assistant_extra.py  test_llm_router.py  test_nemotron_client.py  test_ollama_integration.py  test_orchestrate.py  test_orchestrate_hardening.py  test_rag_index.py  test_rag_index_extra.py  test_rag_index_query.py  test_repo_cleanup.sh  test_self_audit.py  test_semaphore.py
(+12 files in other folders)
