[project]
name = "autokernel"
version = "1.0.0"
description = "Autonomous AI agents optimizing GPU kernels overnight -- for any PyTorch model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "torch>=2.8.0",
    "triton>=3.3.0",
]

[project.optional-dependencies]
# Model ingestion: profile and optimize any PyTorch model
models = [
    "transformers>=4.50.0",
    "accelerate>=1.5.0",
    "safetensors>=0.5.0",
]
testing = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "requests>=2.31.0",
    "ruff>=0.8.0",
    "bandit>=1.8.0",
]
# CUDA C++ backend: native CUDA kernel compilation (speeds up build from ~30s to ~5s)
cuda = [
    "ninja>=1.11.0",
]
# KernelBench integration: benchmark against 250+ standardized GPU kernel problems
kernelbench = [
    "datasets>=2.16.0",
]
# Advanced profiling: HTA, memory analysis
profiling = [
    "HolisticTraceAnalysis>=0.2.0",
]
# HuggingFace Kernels: export and distribute optimized kernels via the Hub
hf-kernels = [
    "kernels>=0.4.0",
    "huggingface-hub>=0.20.0",
]
# Pipeline: LLM-assisted optimization, RAG, automated nightly workflow
pipeline = [
    "ollama>=0.4.0",
    "aiohttp>=3.10.0",
    "faiss-cpu>=1.9.0",
    "pyyaml>=6.0.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"kernel.py" = ["E402"]
"kernels/**/*.py" = ["E402"]
"tests/test_ollama_integration.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
